# Spider_ML_Task_2

./: README.md
applied/: README.md  evaluation_suggestions.md  possibly.py  scrape.py  server.py  urls.json
applied/architecture/: architecture.md
applied/client/: script.js
applied/code/: .gitignore  ingest.py  pyproject.toml  test.py  urls.two.json
applied/code/client/: index.html
applied/code/client/styles/: index.css
applied/code/data/: nhs-common-cold.md  nhs-constipation.md  nhs-diarrhoea.md  nhs-fever-in-adults.md  nhs-sprains-and-strains.md  nice-cardiovascular-disease.md  who-basic-emergency-care.md  who-communicable-disease-sheet.md
applied/code/lib/: config.py  main.py
applied/data/: cdc-heart-disease-prevention.md  nhs-heartburn-and-acid-reflux.md  nhs-urinary-tract-infections-utis.md  nice-hypertension-guideline.md  who-hypertension-treatment.md
applied/lib/: prompt_template.py  response_format.py
applied/outputs/: proof.md  samples.md
base/: intro.md  readme.md
base/level_1/: journal.md  observations.md  readme.md  resnet_18.ipynb
base/level_1/code/: resnet_18.ipynb
base/level_2/: journal.md  observations.md  readme.md  transformer_vs_lstm.ipynb
base/level_2/code/: lstm.ipynb
base/level_2/saved_models/: transformer_72.pt
base/level_3/: comparison.md  journal.md  observation.md  readme.md  transformer_720.ipynb
base/level_3/code/: transformer_72.ipynb  transformer_vs_lstm_plot.ipynb
base/level_3/saved_models/: lstm.pt  transformer_720.pt
