[project]
name = "housemd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "firecrawl-py>=4.32.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-voyageai>=0.4.0",
    "markdown>=3.10.2",
    "markdownify>=1.2.3",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "unstructured>=0.23.1",
    "uvicorn>=0.50.0",
    "voyageai>=0.4.1",
]
